# emojicoin-dot-fun

./: .dockerignore  .env.example  .env.local  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  emoji-indexer-dev-deploy.yaml  package.json
research/backend/: Cargo.toml  compose.yaml
research/backend/indexer/: Cargo.toml  Dockerfile  README.md
research/backend/indexer/.sqlx/: query-0e1669408c8885696bf4d50e578c7be98d516690ec54b115bf0d9c7e2d6f0b73.json  query-13f5f859ca09dc8a755d340fbd2e91f8960f8d75f1f2d154afc59177f1ae44fb.json  query-24a64806bbd1f4ba0dae05e46266e8bdd43142160dc482dc02343daf41398a2d.json  query-47d50e59ebc753aab636c338e378d74851ac52ce81a2b69a743e3b25b8f19faf.json  query-4e45a93e73f79bf212dfdcae3d554f370da05b0874bb4596df15912beb8b0ba9.json  query-56b10cd8c416da3e2a289b9943bc8ba384fc993a75b23dff0fc7447aa6d9a1a2.json  query-599321119631538a2138058691684aff99a06dc6ab5be6e8aff28673d12e530d.json  query-61003adb49574dd78f037b698d53047543632aae69e734958835d7764ca9043f.json  query-641578a5cc1b0d37a9aa4e5e64aea64de355889c1c276e3be9e9cecc4a2bbe42.json  query-7a52f5b30fcf53a8cebaa5864e36b5f1a3ebc5bd89ee3a809331167d1c9f146d.json  query-90fc37459b279efc36e17b58fb748c9889c03369bdd9d3e4052800549eef346a.json  query-93766e59f74f5afb12760e970ca67ed02fd650497826f181c25aadcc7d26531c.json  query-a230789bbce701dfa895b680e083c1df4188ac214eb3bd40111fc059dabcb2fb.json  query-ab929a26115dd2c2e8613a6581aba0dab121483ab503e751bb2382d47298a608.json  query-c950115fb8a98d92056406adb0c8fafc04417c159ac7c9e7100009e64f879fcc.json  query-cc548af0e273dae7686e1405e1499fdb8cdea7eb0748c25d6f9174c85be63bbf.json  query-d85b022ea07e2c2777ef2ae67c32038fe616280cc459a84adf88b747a0c60f09.json  query-e3f1ba6f75d4f0f28c36a5f805f9c4ce4ee1c560d50e5575dd77a2dd20b6c1ae.json  query-e539f5bb576aac0654308ec9beb766b5d7a171e090ba5b1be66250b807e7c624.json  query-f0323838bd741f4c040380654a150c5b0b26c95f3bc9e2b034c283e7b97d81f2.json  query-f378d5001cbb0b8db28e4f30722760e20a2e48af3762f0cf35bc477cf0c0848d.json
research/backend/indexer/migrations/: 20250323092752_init.sql
research/backend/indexer/src/: cli.rs  db.rs  grpc.rs  main.rs  processor.rs
research/backend/indexer/src/processor/: pipeline.rs
research/backend/indexer/src/processor/pipeline/: candlestick.rs  chat.rs  event.rs  favorite.rs  liquidity.rs  market.rs  melee.rs  melee_candlestick.rs  position.rs  reserves.rs  swap.rs  vault.rs
research/backend/restapi/: Cargo.toml  Dockerfile
research/backend/restapi-macro/: Cargo.toml
research/backend/restapi-macro/src/: lib.rs
research/backend/restapi/.sqlx/: query-36f321c1687ff4c9aab6a7e330743c65ffee7aa425106e804663e5acdb05ab83.json  query-7ac7ab5f05b2101750db31e19192e306f19d4647aaa05a17e6f019739b9dca86.json  query-855c02a48d07d99fda182f5da56f718c37fd5c47ecfe1225acd79c940d95d941.json  query-e1f529ed6cb951cd547b68e32acbcac3c53b2f82a3ea6755022e0ca7e3558f24.json
research/backend/restapi/src/: cli.rs  expiry.rs  main.rs  routes.rs  state.rs  util.rs
research/backend/restapi/src/layers/: log.rs
research/backend/restapi/src/routes/: geckoterminal.rs  root.rs
research/backend/restapi/src/routes/geckoterminal/: asset.rs  asset.sql  events.rs  events.sql  latest_block.rs  latest_block.sql  pair.rs  pair.sql
research/backend/sdk/: Cargo.toml  README.md
research/backend/sdk/src/: arena.rs  consts.rs  emojicoin.rs  favorites.rs  lib.rs  scn.rs  util.rs
research/backend/sdk/src/arena/: events.rs  structs.rs
research/backend/sdk/src/emojicoin/: events.rs  structs.rs
research/backend/sdk/src/favorites/: events.rs
src/indexer/broker/: Cargo.toml  Dockerfile
src/indexer/broker/src/: main.rs  processor_connection.rs  server.rs  types.rs  util.rs
src/indexer/broker/src/server/: sse.rs  ws.rs
src/python/hooks/: README.md  check_root_package_json.py  file_name_conventions.py  format.py  mypy.ini  pyproject.toml  utils.py
src/python/move_emojis/: .gitignore  README.md  code_point.py  data_types.py  emojis_to_const.py  pyproject.toml
src/python/move_emojis/scripts/: generate_code.py
src/python/move_emojis/stubs/: data_types.pyi  unidecode.pyi
src/python/move_emojis/utils/: codepoint.py  data_parser.py  git_root.py
src/rust/: Cargo.toml  README.md  compose.yaml  example.env
src/rust/allowlister3000/: Cargo.toml  README.md  add.sh  remove.sh
src/rust/allowlister3000/src/: main.rs
src/rust/apim/: Cargo.toml
src/rust/apim/.sqlx/: query-13c74a6cf0aa3fc961f5a983f0db49930ceff0e933fbf50cd64cc0808a784837.json  query-4006e0f680cbff4f1161a7194cbae507bf3547b5bd773dbd25f688e671246509.json  query-4aa8e4d12d0a0b9e385ca75a154e0a6cf1375fffd75253044fdf93026b9d629d.json  query-9472ad17565320b3c69317068a824c32920cd54baf2798288da58f247e7eb44c.json  query-bfb40ca8f3116966876affb8b5c9c41ee6c91f3c90d17fe8bfe318c336e45449.json
src/rust/apim/src/: expiry.rs  main.rs  routes.rs  state.rs  util.rs
src/rust/apim/src/routes/: geckoterminal.rs  root.rs
src/rust/apim/src/routes/geckoterminal/: asset.rs  asset.sql  events.rs  events.sql  latest_block.rs  latest_block.sql  pair.rs  pair.sql
src/rust/broker/: Cargo.toml  Dockerfile  README.md
src/rust/broker/src/: README.md  main.rs  processor_connection.rs  server.rs  types.rs  util.rs
src/rust/broker/src/server/: sse.rs  ws.rs
src/rust/cloud-formation/: deploy-dev.yaml  deploy.dev.yaml  deploy.yaml  indexer.cfn.yaml  null-template.cfn.yaml  stub.cfn.yaml
src/rust/processor/: Cargo.toml  Dockerfile
src/rust/processor/src/: lib.rs  main.rs  processor.rs  ws_server.rs
src/rust/processor/src/db/: mod.rs  utils.rs
src/rust/processor/src/db/common/models/: mod.rs
src/rust/processor/src/db/common/models/emojicoin_models/: constants.rs  enums.rs  event_utils.rs  json_types.rs  mod.rs  tests.rs  utils.rs
src/rust/processor/src/db/common/models/fungible_asset/: mod.rs
src/rust/processor/src/db/postgres/: schema.rs
src/rust/processor/src/db/postgres/migrations/2024-08-08-024053_emojicoin_events/: down.sql  up.sql
src/rust/processor/src/db/postgres/migrations/2024-08-13-014340_add_latest_market_state_event/: down.sql  up.sql
(+2090 files in other folders)
