[workspace]
members = [
  "src/rust/*"
]
resolver = "2"

[workspace.package]
authors = ["Econia Labs <developers@econialabs.com>"]
edition = "2021"
homepage = "https://www.econialabs.com/"
license = "Apache License"
publish = false
repository = "https://github.com/econia-labs/emojicoin-dot-fun"
rust-version = "1.70"
