# cspell:words colorama
# cspell:words unidecode

[tool.poetry]
authors = ["Econia Labs <developers@econialabs.com>"]
description = "Python scripts for using emojis in Move hex strings."
name = "move_emojis"
package-mode = false
packages = []
version = "1.0.0"

[tool.poetry.dependencies]
colorama = "^0.4.6"
python = "^3.9"
requests = "^2.31.0"
types-colorama = "^0.4.15.20240311"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240406"
