[package]
name = "allowlister3000"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
