# cspell:word allowlister

[dependencies]
axum = "0.7.5"
futures = "0.3.30"
signal-hook = "0.3.17"
signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
tokio = {version = "1.37.0", features = ["rt-multi-thread"]}
tower-http = {version = "0.5.2", features = ["cors"]}

[package]
edition = "2021"
name = "allowlister3000"
version = "0.1.0"
