[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = "0.4.40"
governor = "0.8.1"
moka = { version = "0.12.10", features = ["future"] }
serde = "1.0.218"
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["bigdecimal", "runtime-tokio", "postgres", "time"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tower_governor = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[package]
edition = "2021"
name = "apim"
version = "0.1.0"

