[dependencies]
async-stream = "0.3.5"
axum = {version = "0.7.5", features = ["ws"]}
axum-extra = {version = "0.9.3", features = ["query"]}
env_logger = "0.11.5"
futures-util = "0.3.30"
log = "0.4.22"
processor = {path = "../processor/rust/processor"}
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.122"
strum = {version = "0.26.3", features = ["derive"]}
tokio = {version = "1.39.2", features = ["full"]}
tokio-stream = "0.1.15"
tokio-tungstenite = "0.23.1"

[features]
sse = []
ws = []

[package]
edition = "2021"
name = "broker"
resolver = "2"
version = "0.4.0"
