[package]
name = "processor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.97"
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", tag = "aptos-indexer-processor-sdk-v2.0.0", features = ["postgres_partial"] }
axum = { version = "0.7.9", features = ["ws"] }
bigdecimal = { version = "0.4.0", features = ["serde"] }
bitflags = "2.5.0"
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
diesel = { version = "=2.2.0", features = [
    "chrono",
    "postgres_backend",
    "numeric",
    "serde_json",
    "64-column-tables"
] }
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = "e3beac66cd41ab53d78a10328bb72f272103e5d1", features = [
    "async-connection-wrapper",
    "postgres",
    "bb8",
    "tokio",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.1.0"
field_count = "0.1.1"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
native-tls = "0.2.13"
num = "0.4.3"
once_cell = "1.21.3"
postgres-native-tls = "0.5.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tokio = "1.44.2"
tokio-postgres = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
